2009-03-11  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::createGroup): fixed bug (no #): if
	user selected some rules that belonged to a group and few other
	rules that did not belong to any group at the same time and used
	context menu to place all these rules in a new group, the GUI used
	to crash.

2009-03-06  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel.h (class ProjectPanel): code clean-up: removed
	obsolete method getAddOnLibs()

2009-03-05  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt.cpp (addressRangesInDst::processNext): fixed
	bug #2666971 "fwb_ipt crashes when Address Range object in routing
	rule". Policy compiler for iptables crashed if Address Range
	object was used in "Destination" of a routing rule.

	* RuleSetView.cpp (RuleSetView::insertRule),
	ProjectPanel.cpp (ProjectPanel::closeEvent): fixed bug #2656815
	"Copy/paste does not work properly". Fixed Copy/Paste problem with
	policy rules and crash reported in this bug report.

2009-03-04  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (main), FirewallDialog::platformChanged(): fixed bug
	#2662290: "fwb_iosacl crash after firewall converted from
	iptables". If user changed platform setting of the firewall
	object, the program preserved its old version which was invalid
	for the new platform.

2009-03-02  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): finish
	fixes for bugs #2540389: "Routing Broken from 2.1 to 3.0.3" and
	#2356151 "Routing broken when default route has a 0
	metric". Redirect script output to a file for the time when we
	remove static routing entries and add new ones to prevent ssh
	session from stalling. Restore output back to the terminal when
	script finishes or when an error is detected. Using idea suggested
	by Heiko Helmle <helman@gmx.de>

2009-02-27  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): fixed